Initial set of changes for OVN support

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -367,3 +367,9 @@ dragonflow_ex_peer_patch_port: patch-int
 dragonflow_int_peer_patch_port: patch-ex
 dragonflow_external_network_bridge: br-ex
 dragonflow_publisher_bind_address: "*"
+
+### 
+### OVN Configuration
+###
+
+neutron_ovn_l3_scheduler: leastloaded
