--- a/vars/ubuntu-16.04.yml
+++ b/vars/ubuntu-16.04.yml
@@ -19,6 +19,12 @@ neutron_ovs_distro_packages:
   - openvswitch-common
   - openvswitch-switch
 
+neutron_ovn_distro_packages:
+  - ovn-central
+  - ovn-host
+  - ovn-docker
+  - ovn-common
+
 neutron_driver_vpnaas: neutron_vpnaas.services.vpn.device_drivers.strongswan_ipsec.StrongSwanDriver
 neutron_vpnaas_service_provider: VPN:strongswan:neutron_vpnaas.services.vpn.service_drivers.ipsec.IPsecVPNDriver:default
 
