--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -138,6 +138,7 @@ neutron_sriov_nic_agent_ini_overrides: {}
 neutron_sriov_nic_agent_init_overrides: {}
 neutron_vpn_agent_init_overrides: {}
 neutron_vpnaas_agent_ini_overrides: {}
+neutron_ovn_local_conf_overrides: {}
 
 ###
 ### Quotas
