--- a/tasks/neutron_db_setup.yml
+++ b/tasks/neutron_db_setup.yml
@@ -39,6 +39,7 @@
   failed_when:
     - "_offline_migrations_check.rc == 1"
     - "'Need to apply migrations from neutron contract branch' not in _offline_migrations_check.stdout"
+    - "'Need to apply migrations from networking-ovn contract branch' not in _offline_migrations_check.stdout"
 
 - name: Set the fact for the required offline migrations
   ini_file:
