--- a/vars/main.yml
+++ b/vars/main.yml
@@ -109,6 +109,7 @@ neutron_developer_constraints:
   - "git+{{ neutron_dynamic_routing_git_repo }}@{{ neutron_dynamic_routing_git_install_branch }}#egg=neutron-dynamic-routing"
   - "git+{{ networking_calico_git_repo }}@{{ networking_calico_git_install_branch }}#egg=networking-calico"
   - "git+{{ dragonflow_git_repo }}@{{ dragonflow_git_install_branch }}#egg=dragonflow"
+  - "git+{{ networking_ovn_git_repo }}@{{ networking_ovn_git_install_branch }}#egg=networking-ovn"
 
 neutron_bin: "/openstack/venvs/neutron-{{ neutron_venv_tag }}/bin"
 
@@ -181,9 +182,13 @@ neutron_plugins:
     plugin_conf_ini_overrides: "{{ neutron_ml2_conf_ini_overrides }}"
     plugin_core: ml2
     plugin_ini: plugins/ml2/ml2_conf.ini
-  ml2.ovs.ovn:
+  ml2.ovn:
     drivers_type: "{{ neutron_ml2_drivers_type }}"
+    driver_firewall: openvswitch
+    driver_interface: openvswitch
+    l3_agent_mode: "legacy"
     mechanisms: "ovn"
+    l2_population: false
     plugin_conf_ini_overrides: "{{ neutron_ml2_conf_ini_overrides }}"
     plugin_core: ml2
     plugin_ini: plugins/ml2/ml2_conf.ini
@@ -535,12 +540,20 @@ neutron_services:
  neutron-ovn-northd:
    group: neutron_ovn_northd
    service_name: ovn-northd
-   service_en: "{{ neutron_plugin_type == 'ml2.ovs.ovn' }}"
+   service_en: "{{ neutron_plugin_type == 'ml2.ovn' }}"
+   config_overrides: "{{ neutron_ovn_northd_ini_overrides }}"
+   config_type: "ini"
+   init_config_overrides: "{{ neutron_ovn_northd_init_overrides }}"
+   program_override: "/usr/share/openvswitch/scripts/ovn-ctl start_northd"
    start_order: 3
  neutron-ovn-controller:
    group: neutron_ovn_controller
    service_name: ovn-controller
-   service_en: "{{ neutron_plugin_type == 'ml2.ovs.ovn' }}"
+   service_en: "{{ neutron_plugin_type == 'ml2.ovn' }}"
+   config_overrides: "{{ neutron_ovn_controller_ini_overrides }}"
+   config_type: "ini"
+   init_config_overrides: "{{ neutron_ovn_controller_init_overrides }}"
+   program_override: "/usr/share/openvswitch/scripts/ovn-ctl --no-monitor start_controller"
    start_order: 3
 
 ###
