--- a/tasks/providers/ovn_config.yml
+++ b/tasks/providers/ovn_config.yml
@@ -48,7 +48,7 @@
       or neutron_services['neutron-ovn-controller']['group'] in group_names
 
 - name: Create ovsdb-server listener
-  command: "ovs-vsctl set-manager ptcp:6640:{{ ansible_host }}"
+  command: "ovs-vsctl set-manager ptcp:6640"
   when:
     - neutron_services['neutron-ovn-northd']['group'] in group_names
 
