--- a/tasks/providers/ovn_config.yml
+++ b/tasks/providers/ovn_config.yml
@@ -43,12 +43,16 @@
     name: "{{ neutron_ovs_service_name }}"
     state: started
     enabled: yes
+  tags:
+    - ovn-config
   when:
     - neutron_services['neutron-ovn-northd']['group'] in group_names
       or neutron_services['neutron-ovn-controller']['group'] in group_names
 
 - name: Create ovsdb-server listener
   command: "ovs-vsctl set-manager ptcp:6640"
+  tags:
+    - ovn-config
   when:
     - neutron_services['neutron-ovn-northd']['group'] in group_names
 
@@ -84,27 +88,37 @@
     name: "ovn-northd"
     state: started
     enabled: yes
+  tags:
+    - ovn-config
   when:
     - neutron_services['neutron-ovn-northd']['group'] in group_names
 
 - name: Configure OVN northbound listener
   command: "ovn-nbctl set-connection ptcp:6641"
+  tags:
+    - ovn-config
   when:
     - neutron_services['neutron-ovn-northd']['group'] in group_names
 
 - name: Configure OVN southbound listener
   command: "ovn-sbctl set-connection ptcp:6642"
+  tags:
+    - ovn-config
   when:
     - neutron_services['neutron-ovn-northd']['group'] in group_names
 
 - name: Configure OVN southbound connection
   command: "ovs-vsctl set open . external-ids:ovn-remote=tcp:{{ neutron_ovn_ip }}:6642"
+  tags:
+    - ovn-config
   when:
     - neutron_services['neutron-ovn-controller']['group'] in group_names
 
 # (todo) Dynamic encap type
 - name: Configure supported OVN overlay protocols
   command: "ovs-vsctl set open . external-ids:ovn-encap-type=geneve,vxlan"
+  tags:
+    - ovn-config
   when:
     - neutron_services['neutron-ovn-controller']['group'] in group_names
 
@@ -118,5 +132,7 @@
     name: "ovn-controller"
     state: started
     enabled: yes
+  tags:
+    - ovn-config
   when:
     - neutron_services['neutron-ovn-controller']['group'] in group_names
