--- a/vars/main.yml
+++ b/vars/main.yml
@@ -573,6 +573,17 @@ neutron_services:
    init_config_overrides: "{{ neutron_ovn_controller_init_overrides }}"
    program_override: "/usr/share/openvswitch/scripts/ovn-ctl --no-monitor start_controller"
    start_order: 3
+ networking-ovn-metadata-agent:
+   group: neutron_ovn_controller
+   service_name: ovn-metadata-agent
+   service_en: "{{ neutron_plugin_type == 'ml2.ovn' }}"
+   service_conf_path: "{{ neutron_conf_dir }}"
+   service_conf: networking_ovn_metadata_agent.ini
+   config_options: "--config-file {{ neutron_conf_dir }}/neutron.conf --config-file {{ neutron_conf_dir }}/plugins/ml2/ml2_conf.ini --config-file {{ neutron_conf_dir }}/networking_ovn_metadata_agent.ini --log-file=/var/log/openvswitch/ovn-metadata-agent.log"
+   config_overrides: "{{ neutron_ovn_metadata_agent_ini_overrides }}"
+   config_type: "ini"
+   init_config_overrides: "{{ neutron_ovn_metadata_agent_init_overrides }}"
+   start_order: 3
 
 ###
 ### Internals: Drivers mappings
